--- a/progetto/pokemon-app/backend/public/index.html
+++ b/progetto/pokemon-app/backend/public/index.html
@@ -5,26 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ricerca pokemn</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devextreme@23.2.5/dist/css/dx.light.css">
   <style>
     body { background: #f8f9fa; }
     .card { min-height: 350px; }
+    .dx-textbox { width: 100%; }
   </style>
 </head>
 <body>
   <div class="container mt-4">
     <h1 id="title" class="mb-4">Ricerca pokemn</h1>
+    <div class="row mb-3">
+      <div class="col-md-8">
+        <div id="searchBox"></div>
+      </div>
+      <div class="col-md-4">
+        <button id="search-btn" class="btn btn-primary w-100">Cerca</button>
+      </div>
+    </div>
     <div class="row" id="pokemon-row"></div>
     <button id="load-btn" class="btn btn-success mt-3">Carica altri 3</button>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/devextreme@23.2.5/dist/js/dx.all.js"></script>
   <script>
     let offset = 0;
+    let searchValue = '';
+    let searchBoxInstance;
     async function fetchTitle() {
       const res = await fetch('/api/title');
       const data = await res.json();
       document.getElementById('title').textContent = data.title;
     }
     async function fetchPokemons() {
-      const res = await fetch(`/api/pokemon?offset=${offset}`);
+      let url = `/api/pokemon?offset=${offset}`;
+      if (searchValue && searchValue.trim() !== '') {
+        url = `/api/pokemon?search=${encodeURIComponent(searchValue.trim())}`;
+      }
+      const res = await fetch(url);
       const pokemons = await res.json();
       const row = document.getElementById('pokemon-row');
       row.innerHTML = '';
@@ -46,9 +63,20 @@
     }
     document.getElementById('load-btn').onclick = () => {
       offset += 3;
+      searchValue = '';
+      if (searchBoxInstance) searchBoxInstance.option('value', '');
+      fetchPokemons();
+    };
+    document.getElementById('search-btn').onclick = () => {
+      searchValue = searchBoxInstance.option('value');
+      offset = 0;
       fetchPokemons();
     };
     fetchTitle();
+    // Inizializza DevExtreme TextBox
+    searchBoxInstance = new DevExpress.ui.dxTextBox(document.getElementById('searchBox'), {
+      placeholder: 'Cerca Pokémon per nome...'
+    });
     fetchPokemons();
   </script>
 </body>
