--- a/progetto/pokemon-app/backend/public/index.html
+++ b/progetto/pokemon-app/backend/public/index.html
@@ -19,8 +19,8 @@
       <div class="col-md-8">
         <div id="searchBox"></div>
       </div>
-      <div class="col-md-4">
-        <button id="search-btn" class="btn btn-primary w-100">Cerca</button>
+      <div class="col-md-4 d-flex align-items-end">
+        <div id="searchBtn" style="width:100%"></div>
       </div>
     </div>
     <div class="row" id="pokemon-row"></div>
@@ -31,6 +31,7 @@
     let offset = 0;
     let searchValue = '';
     let searchBoxInstance;
+    let searchBtnInstance;
     async function fetchTitle() {
       const res = await fetch('/api/title');
       const data = await res.json();
@@ -67,15 +68,22 @@
       if (searchBoxInstance) searchBoxInstance.option('value', '');
       fetchPokemons();
     };
-    document.getElementById('search-btn').onclick = () => {
+    function doSearch() {
       searchValue = searchBoxInstance.option('value');
       offset = 0;
       fetchPokemons();
-    };
+    }
     fetchTitle();
     // Inizializza DevExtreme TextBox
     searchBoxInstance = new DevExpress.ui.dxTextBox(document.getElementById('searchBox'), {
       placeholder: 'Cerca Pokémon per nome...'
+    });
+    // Inizializza DevExtreme Button
+    searchBtnInstance = new DevExpress.ui.dxButton(document.getElementById('searchBtn'), {
+      text: 'Cerca',
+      type: 'default',
+      width: '100%',
+      onClick: doSearch
     });
     fetchPokemons();
   </script>
